syntax = "proto3";
package com.gt.scr.movie.grpc;

option java_multiple_files = true;

option java_outer_classname = "LoginGrpc";

message LoginGrpcRequestDTO {
  string userName = 1;
  string password = 2;
}

message LoginGrpcResponseDTO {
  string token = 1;
  string id = 2;
}

service LoginService {
  rpc login(LoginGrpcRequestDTO) returns (LoginGrpcResponseDTO);
}

